(library
 (name camelisp)
 (public_name camelisp)
 ; Add new modules, keep existing ones in order
 (modules Value InferredType Analyze Compiler Runtime Interpreter Parse Lexer Parser Translate)
 (libraries base core core_unix.filename_unix sexplib fmt dynlink unix str menhirLib)
 (preprocess
  (pps ppx_compare ppx_sexp_conv ppx_inline_test ppx_let)) ; Keep sexp_conv for Value.t
 (flags (:standard -w -8))
 (library_flags (-linkall)))

(ocamllex Lexer)
(menhir (modules Parser))
